rewrite to use Prettier + Eslint

--- a/web/src/styles/settings.scss
+++ b/web/src/styles/settings.scss
@@ -3,10 +3,11 @@
  */
 
 :root {
-    color-scheme: unset;
+  color-scheme: unset;
 }
 
-body, html {
+body,
+html {
   overflow: hidden;
   background-color: transparent !important;
 }
